# perfecter

./: .gitignore  README.md  initialize.py  pyproject.toml
output/: error.txt  last_output.txt
src/: __main__.py
src/perfecter_sfinder/: __init__.py  output_parser.py  percent.txt  types.py
